@@ -25,23 +25,23 @@ namespace TEN::Gui
 		{ ID_PISTOLS_AMMO_ITEM, 4, 0.5f, EulerAngles::Zero, OPT_USE, STRING_PISTOL_AMMO, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_UZI_ITEM, -4, 0.5f, EulerAngles(ANGLE(135.0f), ANGLE(-90.0f), ANGLE(90.0f)), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_UZI, STRING_UZIS , NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_UZI_AMMO_ITEM, 5, 0.5f, EulerAngles(ANGLE(29.5f), 0, 0), OPT_USE, STRING_UZI_AMMO, NO_JOINT_BITS, INV_ROT_Y },
-		{ ID_SHOTGUN_ITEM, -6, 0.8f, EulerAngles(ANGLE(270.0f), ANGLE(-20.0f), ANGLE(45)), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_SHOTGUN, STRING_SHOTGUN, 1, INV_ROT_Y },
+		{ ID_SHOTGUN_ITEM, -6, 0.8f, EulerAngles(ANGLE(270.0f), ANGLE(-20.0f), ANGLE(45)), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_SHOTGUN, STRING_SHOTGUN, 0x01, INV_ROT_Y },
 		{ ID_SHOTGUN_AMMO1_ITEM, 0, 0.5f, EulerAngles(0, ANGLE(-90.0f), 0), OPT_USE, STRING_SHOTGUN_AMMO_1, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_SHOTGUN_AMMO2_ITEM, 0, 0.5f, EulerAngles(0, ANGLE(-90.0f), 0), OPT_USE, STRING_SHOTGUN_AMMO_2, NO_JOINT_BITS, INV_ROT_Y },
-		{ ID_REVOLVER_ITEM, 0, 0.5f, EulerAngles(ANGLE(60.0f), ANGLE(-90.0f), ANGLE(85.0f)), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_REVOLVER, STRING_REVOLVER , 1, INV_ROT_Y },
+		{ ID_REVOLVER_ITEM, 0, 0.5f, EulerAngles(ANGLE(60.0f), ANGLE(-90.0f), ANGLE(85.0f)), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_REVOLVER, STRING_REVOLVER , 0x01, INV_ROT_Y },
 		{ ID_REVOLVER_AMMO_ITEM, 0, 0.5f, EulerAngles(ANGLE(-16.0f), ANGLE(180.0f), 0), OPT_USE, STRING_REVOLVER_AMMO, NO_JOINT_BITS, INV_ROT_Y },
-		{ ID_REVOLVER_ITEM, 0, 0.5f, EulerAngles(ANGLE(60.0f), ANGLE(90.0f), ANGLE(85.0f)), OPT_EQUIP | OPT_SEPERABLE | OPT_CHOOSE_AMMO_REVOLVER, STRING_REVOLVER_LASERSIGHT, 3, INV_ROT_Y },
-		{ ID_CROSSBOW_ITEM, 0, 0.5f, EulerAngles(ANGLE(33.0f), ANGLE(-90.0f), 0), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_CROSSBOW, STRING_CROSSBOW, 1, INV_ROT_Y },
-		{ ID_CROSSBOW_ITEM, 0, 0.5f, EulerAngles(ANGLE(33.0f), ANGLE(-90.0f), 0), OPT_EQUIP | OPT_SEPERABLE | OPT_CHOOSE_AMMO_CROSSBOW, STRING_CROSSBOW_LASERSIGHT, 3, INV_ROT_Y },
+		{ ID_REVOLVER_ITEM, 0, 0.5f, EulerAngles(ANGLE(60.0f), ANGLE(90.0f), ANGLE(85.0f)), OPT_EQUIP | OPT_SEPERABLE | OPT_CHOOSE_AMMO_REVOLVER, STRING_REVOLVER_LASERSIGHT, 0x0B, INV_ROT_Y },
+		{ ID_CROSSBOW_ITEM, 0, 0.5f, EulerAngles(ANGLE(33.0f), ANGLE(-90.0f), 0), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_CROSSBOW, STRING_CROSSBOW, 0x01, INV_ROT_Y },
+		{ ID_CROSSBOW_ITEM, 0, 0.5f, EulerAngles(ANGLE(33.0f), ANGLE(-90.0f), 0), OPT_EQUIP | OPT_SEPERABLE | OPT_CHOOSE_AMMO_CROSSBOW, STRING_CROSSBOW_LASERSIGHT, 0x03, INV_ROT_Y },
 		{ ID_CROSSBOW_AMMO1_ITEM, 0, 0.5f, EulerAngles(0, ANGLE(-90.0f), 0), OPT_USE, STRING_CROSSBOW_AMMO_1, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_CROSSBOW_AMMO2_ITEM, 0, 0.5f, EulerAngles(0, ANGLE(-90.0f), 0), OPT_USE, STRING_CROSSBOW_AMMO_2, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_CROSSBOW_AMMO3_ITEM, 0, 0.5f, EulerAngles(0, ANGLE(-90.0f), 0), OPT_USE, STRING_CROSSBOW_AMMO_3, NO_JOINT_BITS, INV_ROT_Y },
-		{ ID_HK_ITEM, 0, 0.5f, EulerAngles(ANGLE(280.0f), 0, 0), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_HK, STRING_HK, 1, INV_ROT_Y },
+		{ ID_HK_ITEM, 0, 0.5f, EulerAngles(ANGLE(280.0f), 0, 0), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_HK, STRING_HK, 0x01, INV_ROT_Y },
 		{ ID_HK_ITEM, 0, 0.5f, EulerAngles(ANGLE(280.0f), ANGLE(-45.0f), 0), OPT_EQUIP | OPT_SEPERABLE | OPT_CHOOSE_AMMO_HK, STRING_HK_LASERSIGHT, NO_JOINT_BITS, INV_ROT_Y },
-		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_AMMO, 2, INV_ROT_Y },
-		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_RAPID_MODE, 3, INV_ROT_Y },
-		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_BURST_MODE, 4, INV_ROT_Y },
-		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_SNIPER_MODE, 5, INV_ROT_Y },
+		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_AMMO, 0x02, INV_ROT_Y },
+		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_RAPID_MODE, 0x03, INV_ROT_Y },
+		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_BURST_MODE, 0x04, INV_ROT_Y },
+		{ ID_HK_AMMO_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(90.0f), 0), OPT_USE, STRING_HK_SNIPER_MODE, 0x05, INV_ROT_Y },
 		{ ID_GRENADE_GUN_ITEM, 0, 0.5f, EulerAngles(0, ANGLE(90.0f), ANGLE(65)), OPT_EQUIP | OPT_COMBINABLE | OPT_CHOOSE_AMMO_GRENADEGUN, STRING_GRENADE_LAUNCHER, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_GRENADE_AMMO1_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(-90.0f), 0), OPT_USE, STRING_GRENADE_LAUNCHER_AMMO_1, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_GRENADE_AMMO2_ITEM, 3, 0.5f, EulerAngles(0, ANGLE(-90.0f), 0), OPT_USE, STRING_GRENADE_LAUNCHER_AMMO_2, NO_JOINT_BITS, INV_ROT_Y },
