@@ -1,7 +1,8 @@
 Version 1.0.4
 =============
 
-* Fix incorrect string IDs for HK and revolver with lasersight.
+* Fix lasersight always displaying with revolver and crossbow.
+* Fix incorrect string IDs for item combine, HK and revolver with lasersight.
 
 Version 1.0.3
 =============
